I usually commit everything I do...

--- a/main.conf
+++ b/main.conf
@@ -1,18 +1,14 @@
 {
 	instances = {
-		list = Template(f"templates/list.html");
-
-		signin = PostFieldReader(
-			)
-
-		content = Dir() {
-			main->instances.list;
-			signin->instances.signin;
-		};
+		creds = Connector(
+			"Server=localhost; Database=deeldhost; User ID=deeldhost; Password=deeldhost; Pooling=true; Allow User Variables=True;");
 
 		begin = Dir() {
-			default->Template(f"templates/skelet.html") {
-				content->instances.content;
+			default->HttpStatus(mime = "text/html") {
+				next-><f"calls.conf@begin">(locale = "en.html");
+			};
+			api->HttpStatus(mime = "application/javascript") {
+				next-><f"calls.conf@begin">(locale = "en.json");
 			};
 			static->Fileserver(f"static|png,js,jpg,zip,gif");
 		};
