--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "message/aglogin"]
-	path = message/aglogin
+[submodule "aglogin"]
+	path = aglogin
 	url = https://github.com/strandtentje/aglogin.git
