Added simple messaging

--- a/message/main.conf
+++ b/message/main.conf
@@ -10,10 +10,6 @@
 			f"views/%s/BadMessage.%s", 
 			locales = locales);
 
-		passfault = Translation(
-			f"views/%s/BadPassphrase.%s",
-			locales = locales);
-
 		done = Translation(
 			f"views/%s/MessageSent.%s",
 			locales = locales);
@@ -21,30 +17,30 @@
 
 	message = {
 		add = DataWriter(
-			f"queries/Add message.auto.sql"
+			f"queries/Add Message text author.auto.sql"
 		) {
 			changed_1->messages.done;
 		};
 
 		view = Translation(f"views/%s/item.%s", locales = locales);
+
+		viewall = DataReader(
+			f"queries/Get Message.auto.sql"
+		) {
+			iterator->message.view;
+		};
 	};
 
 	instances = {
 		list = Translation(f"views/%s/list.%s", locales = locales) {
-			items->DataReader(
-				f"queries/Get message.auto.sql"
-			) {
-				iterator->message.view;
-			};
+			items->message.viewall;
 		};
 
 		add = PostFieldReader(
-			field_message = "^.{3,300}$",
-			field_passphrase = "^.{3,300}$",
+			field_message = "^.{3,300}$"
 		) {
 			form->messages.form;
 			message_failure->messages.messagefault;
-			passphrase_failure->messages.passfault;
 			successful->message.add;
 		};
 	};
