Some refactoring in calls

--- a/calls.conf
+++ b/calls.conf
@@ -1,15 +1,46 @@
 {
 	locales = ["en.html", "en.json"];
 
+	share = {
+		add = <f"share/main.conf@add">;
+		list = <f"share/main.conf@list">;
+	};
+
+	message = {
+		add = <f"message/main.conf@add">;
+		list = <f"message/main.conf@list">;
+	};
+
 	instances = {
-		begin = Translation(f"skeleton.%s", locales = locales) {
-			content->Dir() {
-				main->instances.overview;
-				addshare-><f"share/main.conf@add">;
-				listshares-><f"share/main.conf@list">;
-				addmessage->message.add;
-				listmessages->message.list;
+		overview = Translation(f"overview.%s", locales = locales) {
+			listshares->share.list;
+			listmessages->message.list;
+		};
+
+		content = Dir() {
+			main->instances.overview;
+			share->Dir() {
+				main->share.list;			
+				add->share.add;
+				list->share.list;
 			};
+			message->Dir() {
+				main->message.list;
+				list->message.list;
+				add->Translation(f"addmessage.%s", locales = locales) {
+					/* is this awful? */
+					api-><f"aglogin/api-login.conf@identify"> {
+						identified->message.add;
+					};
+					web-><f"aglogin/auth.conf@enticate"> {
+						authenticated->message.add;
+					};
+				};
+			};
+		};
+
+		begin = Translation(f"skeleton.%s", locales = locales) {
+			content->instances.content;
 			style->Template(f"style/basic.css");
 		};
 	};
