Some back-end tools

--- a/main.conf
+++ b/main.conf
@@ -1,16 +1,32 @@
 {
+	user = {
+		logout = <f"aglogin/auth.conf@end">;
+
+		register = <f"aglogin/auth.conf@enticate"> {
+			unauthenticated-><f"aglogin/auth.conf@register"> {
+				authenticated->user.logout;
+			};		
+			authenticated->user.logout;
+		};
+	};
+
 	instances = {
 		creds = Connector(
 			"Server=localhost; Database=deeldhost; User ID=deeldhost; Password=deeldhost; Pooling=true; Allow User Variables=True;");
 
 		begin = Dir() {
-			default->HttpStatus(mime = "text/html") {
-				next-><f"calls.conf@begin">(locale = "en.html");
-			};
-			api->HttpStatus(mime = "application/javascript") {
-				next-><f"calls.conf@begin">(locale = "en.json");
-			};
+			default-><f"calls.conf@begin">(locale = "en.html");
+			bare-><f"calls.conf@content">(locale = "en.html");
+			api-><f"calls.conf@begin">(locale = "en.json");
 			static->Fileserver(f"static|png,js,jpg,zip,gif");
+		};
+
+		user = Template(f"adminframe.html") {
+			style->Template(f"style/basic.css");
+			content->Dir() {
+				reg->user.register;
+				logout->user.logout;
+			};
 		};
 	};
 }
