Started work on file indexing

--- a/calls.conf
+++ b/calls.conf
@@ -11,6 +11,11 @@
 		list = <f"message/main.conf@list">;
 	};
 
+	files = {
+		add = <f"file/main.conf@add">;		
+		search = <f"file/main.conf@search">;
+	};
+
 	instances = {
 		overview = Translation(f"overview.%s", locales = locales) {
 			listshares->share.list;
@@ -19,6 +24,11 @@
 
 		content = Dir() {
 			main->instances.overview;
+			file->Dir() {
+				main->files.search;
+				add->files.add;
+				search->files.search;
+			};
 			share->Dir() {
 				main->share.list;			
 				add->share.add;
